# OpenPico4UltraCapture

./: .gitignore  AGENT.md  BodyTrackingRecorder.cs  CanvasFollower.cs  Mar5eveningplan.md  NativeIMUBridge.cs  PassthroughEnabler.cs  README.md  RecordingController.cs  SensorRecorder.cs  SimpleRecordingController.cs  SpatialMeshCapture.cs  SyncManager.cs  WORKLOG.md  postprocess.py  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
UnityApp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
docs/: 2026-03-11_CAPTURE_AUDIT_ISSUES_AND_FIX_PLAN.md  TRAINING_GRADE_ROBOTICS_FIX_PLAN.md
local_view/: generate_all_streams_dashboard.py  generate_synced_side_by_side_dashboard.py  index.html  reality_check_all_streams.py
local_view/20260302_130629_capture/: action_log.csv  body_pose.csv  calibration.json  hand_joints.csv  head_pose.csv  imu.csv  reality_check_report.json  session_summary.json
local_view/20260302_131912_capture/: action_log.csv  body_pose.csv  calibration.json  hand_joints.csv  head_pose.csv  imu.csv  reality_check_report.json  session_summary.json
local_view/20260302_150155_capture/: action_log.csv  body_pose.csv  calibration.json  head_pose.csv  imu.csv  reality_check_report.json  session_summary.json
local_view/20260302_151416_capture/: action_log.csv  body_pose.csv  calibration.json  head_pose.csv  imu.csv  reality_check_report.json  session_summary.json
local_view/20260302_151527_capture/: action_log.csv  body_pose.csv  calibration.json  hand_joints.csv  (+2 more)
(+331 files in other folders)
