[project]
name = "openpico4ultracapture"
version = "0.1.0"
description = "Post-processing pipeline for PICO 4 Ultra capture sessions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe>=0.10.0",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "tqdm>=4.65.0",
]

[tool.uv]
package = false
